--- a/application/index/view/blueprint/add-drawing-detial.html
+++ b/application/index/view/blueprint/add-drawing-detial.html
@@ -8,7 +8,6 @@
                 <input type="text" class="layui-input" title="无法编辑" value="{$detailArray.drawing_detail_id}" id="drawing_detail_id"  disabled="">
             </div>
         </div>
-
         <div class="layui-form-item">
             <label class="layui-form-label">内图编号</label>
             <div class="layui-input-inline" id="customNumberDiv">
@@ -143,15 +142,12 @@
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">客户简称</label>
-            <?php $clienyName = getClientName($clientId);?>
             <div class="layui-input-inline">
                 <select name="modules" lay-verify="required" lay-search="" id="client_id">
-                    <option value="{$clientId}"><?php echo $clienyName['clientName'] ?></option>
-                    <optgroup label="选择客户">
-                        {volist name="$client" id="clientList"}
-                        <option value="{$clientList.id}">{$clientList.client_abbreviation}</option>
-                        {/volist}
-                    </optgroup>
+                    <option value>请选择</option>
+                    {volist name="$client" id="clientList"}
+                    <option value="{$clientList.id}">{$clientList.client_abbreviation}</option>
+                    {/volist}
                 </select>
             </div>
         </div>
@@ -263,7 +259,7 @@
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">备料要求</label>
+            <label class="layui-form-label">材料要求</label>
             <div class="layui-input-inline">
                 <input type="text" class="layui-input" value=" "  id="material_requirements">
             </div>
@@ -657,6 +653,7 @@
                         }
                     },
                 });
+
             }
         });
     });
