--- a/application/index/view/internal/add-drawing-detial.html
+++ b/application/index/view/internal/add-drawing-detial.html
@@ -58,8 +58,10 @@
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">客户简称</label>
+
             <div class="layui-input-inline">
-                <select name="modules" lay-verify="required" lay-search="" id="client_id">
+                <select  name="modules" lay-verify="required"  id="client_id">
+                    <option value>请选择</option>
                     {volist name="$client" id="clientList"}
                     <option value="{$clientList.id}">{$clientList.client_abbreviation}</option>
                     {/volist}
