--- a/application/index/view/assembly/assembly-info.html
+++ b/application/index/view/assembly/assembly-info.html
@@ -32,7 +32,7 @@
             <button type="submit" class="layui-btn"  lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
           </form>
         </div>
-        <span class="x-right" style="line-height:40px">共{$assembluCount}条 · 有{$assembluCount/25|getInt}页</span>
+        <span class="x-right" style="line-height:40px">共{$assembluCount}条 · 共{$assembluCount/25|getInt}页</span>
       </xblock>
       <div class="container-wrap">
         <div class="box-1">
