--- a/application/index/view/internal/internal-info.html
+++ b/application/index/view/internal/internal-info.html
@@ -35,7 +35,7 @@
                 <button type="submit" class="layui-btn"  lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
             </form>
         </div>
-        <span class="x-right" style="line-height:40px">共{$countInternalInfo}条 · 有{$countInternalInfo/25|getInt}页</span>
+        <span class="x-right" style="line-height:40px">共{$countInternalInfo}条 · 共{$countInternalInfo/25|getInt}页</span>
         <script>
             $(function () {
                 $("input").click(function () {
