--- a/application/index/view/blueprint/blueprint-info.html
+++ b/application/index/view/blueprint/blueprint-info.html
@@ -36,7 +36,7 @@
         <button type="submit" class="layui-btn"  lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
       </form>
     </div>
-      <span class="x-right" style="line-height:40px">共{$blueprintInfoCount}条 · 有{$blueprintInfoCount/25|getInt}页</span>
+      <span class="x-right" style="line-height:40px">共{$blueprintInfoCount}条 · 共{$blueprintInfoCount/25|getInt}页</span>
     <script>
       $(function () {
           $("input").click(function () {
