--- a/application/index/view/blueprint/drawing_files.html
+++ b/application/index/view/blueprint/drawing_files.html
@@ -34,6 +34,7 @@
     <form onsubmit="return false">
         <div class="mt-3">
             <button type="button" onclick="DelFiles()" class="btn btn-danger">删除</button>
+            <a href="{$url}" download="{$drawing_num.'的'.$key}文件.pdf"><button type="button"  class="btn btn-success">下载</button></a>
         </div>
     </form>
 </div>
@@ -64,7 +65,7 @@
                 }
                 if(res.state==200)
                 {
-                    layer.msg(res.msg, {icon: 1,time: 2000},
+                    layer.msg(res.msg, {icon: 1,time: 1000},
                         function () {
                             location.reload();
                         });
