搭建订单添加界面

--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -242,11 +242,20 @@
                 </a>
             </li>
             <li>
-                <a _href="{:url('index/order/order')}">
+                <a  href="javascript:;">
                     <i class="icon iconfont">&#xe702;</i>
                     <cite>订单管理</cite>
                     <i class="iconfont nav_right">&#xe697;</i>
                 </a>
+                <ul class="sub-menu">
+                    <li>
+                        <a _href="{:url('index/order/order')}">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>订单列表</cite>
+                        </a>
+                    </li >
+                </ul>
+
             </li>
             {/if}
             <li>
