--- a/application/index/view/order/order.html
+++ b/application/index/view/order/order.html
@@ -3,31 +3,43 @@
     <div class="x-nav">
       <span class="layui-breadcrumb">
         <a href="">首页</a>
-        <a href="">演示</a>
+        <a href="">订单管理</a>
         <a>
-          <cite>导航元素</cite></a>
+          <cite>订单列表</cite></a>
       </span>
       <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right" href="javascript:location.replace(location.href);" title="刷新">
         <i class="layui-icon" style="line-height:30px">ဂ</i></a>
     </div>
     <div class="x-body">
+        <xblock>
+          <!--<button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>-->
+          <button class="layui-btn" onclick="x_admin_show('添加订单','{:url(\'index/Order/addOrder\')}',600,600)"><i class="layui-icon"></i>添加</button>
+          <div class="layui-input-inline">
+            <form class="layui-form" action="{:url('index/Blueprint/blueprintOutside')}" method="post">
+              <div class="layui-input-inline">
+                <input type="text" name="modules" autocomplete="off" placeholder="请输入关键字..." class="layui-input">
+              </div>
+              <div class="layui-input-inline">
+                <select name="id" lay-search="" >
+                  <option value=""></option>
+
+                </select>
+              </div>
+              <button type="submit" class="layui-btn"  lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
+            </form>
+          </div>
+          <span class="x-right" style="line-height:40px">共条 · 共页</span>
+        </xblock>
       <div class="layui-row">
-        <form class="layui-form layui-col-md12 x-so">
-          <input type="text" name="username"  placeholder="请输入订单号" autocomplete="off" class="layui-input">
-          <button class="layui-btn"  lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
-        </form>
-      </div>
-      <xblock>
-        <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
-        <button class="layui-btn" onclick="x_admin_show('添加用户','./order-add.html')"><i class="layui-icon"></i>添加</button>
-        <span class="x-right" style="line-height:40px">共有数据：88 条</span>
-      </xblock>
-      <table class="layui-table">
-        <thead>
-          <tr>
+        <div class="container-wrap">
+          <div class="box-1">
+            <table class="layui-table">
+              <thead>
+              <tr>
             <th>
               <div class="layui-unselect header layui-form-checkbox" lay-skin="primary"><i class="layui-icon">&#xe605;</i></div>
             </th>
+              <th>操作</th>
             <th>订单编号</th>
             <th>订单内容</th>
             <th>交货日期</th>
@@ -35,39 +47,43 @@
             <th>备料</th>
             <th>发货</th>
             <th>收款</th>
-            <th>订单总成</th>
+            <th>订单报价</th>
             <th>完成</th>
             <th>客户项目号</th>
             <th>备注</th>
             <th>评审</th>
             <th>建档时间</th>
-            <th>操作</th>
-            </tr>
+            <th>报价</th>
+              </tr>
         </thead>
         <tbody>
           <tr>
             <td>
               <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='2'><i class="layui-icon">&#xe605;</i></div>
             </td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
             <td class="td-manage">
-              <button class="layui-btn layui-btn layui-btn-xs"  onclick="x_admin_show('编辑','admin-edit.html')" ><i class="layui-icon">&#xe642;</i>编辑</button>
+              <a title="修改" onclick="x_admin_show('修改外图','{:url(\'index/Blueprint/outsideEdit\',[\'id\'=>1])}',400,400)", href="javascript:;"><i style="color: green" class="layui-icon"></i></a>
+              <a title="删除" onclick="delete_(this,'')" href="javascript:void(0);" ><i  style="color:red;" class="layui-icon"></i></a>
             </td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <th>报价</th>
           </tr>
         </tbody>
       </table>
+          </div>
+        </div>
       <div class="page">
         <div>
           <a class="prev" href="">&lt;&lt;</a>
