--- a/application/index/view/order/order_edit.html
+++ b/application/index/view/order/order_edit.html
@@ -6,7 +6,8 @@
       <label for="order_id" class="layui-form-label">订单编号</label>
       <span style="color: red">*</span>
       <div class="layui-input-inline">
-        <input type="text" id="order_id" value="{$code}" disabled name="order_id" lay-verify="required" autocomplete="off" class="layui-input" >
+        <input type="text" id="order_id" value="{$orderRow.order_id}" disabled lay-verify="required" autocomplete="off" class="layui-input" >
+        <input type="hidden" id="id" value="{$orderRow.id}"  lay-verify="required" name="id" autocomplete="off" class="layui-input" >
         <p id="pLog" style="color:red"></p>
       </div>
     </div>
@@ -14,13 +15,13 @@
     <div class="layui-form-item layui-form-text">
       <label class="layui-form-label">订单说明</label>
       <div class="layui-input-block">
-        <textarea  placeholder="请输入内容" name="order_content" class="layui-textarea"></textarea>
+        <textarea  placeholder="请输入内容" name="order_content" class="layui-textarea">{$orderRow.order_content}</textarea>
       </div>
     </div>
     <div class="layui-form-item">
       <label for="delivery_time" class="layui-form-label">交货日期</label>
       <div class="layui-inline"> <!-- 注意：这一层元素并不是必须的 -->
-        <input type="text" name="delivery_time" class="layui-input" id="data" lay-key="1">
+        <input type="text" name="delivery_time"  value="{$orderRow.delivery_time}" class="layui-input" id="data" lay-key="1">
       </div>
       <script>
           layui.use('laydate', function(){
@@ -37,52 +38,52 @@
     <div class="layui-form-item">
       <label class="layui-form-label">收款</label>
       <div class="layui-input-block">
-        <input type="checkbox" name="receivables" lay-skin="switch" lay-filter="switchTest" lay-text="是|否"><div class="layui-unselect layui-form-switch" lay-skin="_switch"><em>否</em><i></i></div>
+        <input type="checkbox" name="receivables"  {if 1==$orderRow.receivables}checked=""{/if}   lay-skin="switch" lay-filter="switchTest" lay-text="是|否"><div class="layui-unselect layui-form-switch" lay-skin="_switch"><em>否</em><i></i></div>
       </div>
     </div>
 
     <div class="layui-form-item">
       <label for="client_id" class="layui-form-label">客户编号</label>
       <div class="layui-input-inline">
-        <input type="text" id="client_id" name="client_id" autocomplete="off" class="layui-input" >
+        <input type="text" id="client_id" name="client_id" value="{$orderRow.client_id}" autocomplete="off" class="layui-input" >
       </div>
     </div>
     <div class="layui-form-item">
       <label for="order_price" class="layui-form-label">订单报价</label>
       <span style="color: red">*</span>
       <div class="layui-input-inline">
-        <input type="text" id="order_price" name="order_price" lay-verify="required" autocomplete="off" class="layui-input" >
+        <input type="text" id="order_price" name="order_price"  value="{$orderRow.order_price}" lay-verify="required" autocomplete="off" class="layui-input" >
       </div>
     </div>
     <div class="layui-form-item">
       <label for="prepare" class="layui-form-label">备料</label>
       <div class="layui-input-inline">
-        <input type="text" id="prepare" name="prepare"  autocomplete="off" class="layui-input" >
+        <input type="text" id="prepare" name="prepare"  value="{$orderRow.prepare}"  autocomplete="off" class="layui-input" >
       </div>
     </div>
     <div class="layui-form-item">
       <label class="layui-form-label">发货</label>
       <div class="layui-input-block">
-        <input type="checkbox" name="deliver_goods" lay-skin="switch" lay-filter="switchTest" lay-text="是|否"><div class="layui-unselect layui-form-switch" lay-skin="_switch"><em>否</em><i></i></div>
+        <input type="checkbox" name="deliver_goods" {if 1==$orderRow.deliver_goods}checked=""{/if}  lay-skin="switch" lay-filter="switchTest" lay-text="是|否"><div class="layui-unselect layui-form-switch" lay-skin="_switch"><em>否</em><i></i></div>
       </div>
     </div>
     <div class="layui-form-item">
       <label class="layui-form-label">是否完成</label>
       <div class="layui-input-block">
-        <input type="checkbox" name="if_complete" lay-skin="switch" lay-filter="switchTest" lay-text="是|否"><div class="layui-unselect layui-form-switch" lay-skin="_switch"><em>否</em><i></i></div>
+        <input type="checkbox" name="if_complete" {if 1==$orderRow.if_complete}checked=""{/if}  lay-skin="switch" lay-filter="switchTest" lay-text="是|否"><div class="layui-unselect layui-form-switch" lay-skin="_switch"><em>否</em><i></i></div>
       </div>
     </div>
 
     <div class="layui-form-item">
       <label for="client_prj_id" class="layui-form-label">客户项目编号</label>
       <div class="layui-input-inline">
-        <input type="text" id="client_prj_id" name="client_prj_id"  autocomplete="off" class="layui-input" >
+        <input type="text" id="client_prj_id" name="client_prj_id"  value="{$orderRow.client_prj_id}"  autocomplete="off" class="layui-input" >
       </div>
     </div>
     <div class="layui-form-item">
       <label class="layui-form-label"></label>
       <button class="layui-btn" lay-submit lay-filter="addId" >
-        增加
+        修改
       </button>
     </div>
   </form>
@@ -98,9 +99,9 @@
         //监听提交
         form.on('submit(addId)', function(data){
             //console.log(data);
-            $.post("{:url('index/Order/addOrder')}",data.field,function(info){
+            $.post("{:url('index/Order/editOrder')}",data.field,function(info){
                 if (info) {
-                    layer.alert("添加成功", {icon: 6},function () {
+                    layer.alert("修改成功", {icon: 6},function () {
                         window.parent.location.reload();  //刷新父级页面
                         // 获得frame索引
                         var index = parent.layer.getFrameIndex(window.name);
@@ -108,7 +109,7 @@
                         parent.layer.close(index);
                     });
                 }else{
-                    layer.alert("添加失败", {icon: 5});
+                    layer.alert("修改失败", {icon: 5});
                 }
             },'json');
             return false;
