--- a/application/index/view/order/order-detail-info.html
+++ b/application/index/view/order/order-detail-info.html
@@ -3,41 +3,64 @@
 
 <div class="x-body">
   <fieldset class="layui-elem-field layui-field-title" style="margin-top: 5px;">
-    <legend>工艺信息</legend>
+    <legend>订单明细</legend>
     <div class="layui-row">
       <div class="container-wrap">
         <div class="box-1">
           <table class="layui-table">
             <thead>
             <tr>
-              <th>明细编号</th>
-              <th>公司编号</th>
-              <th>外图编号</th>
-              <th>图纸名称</th>
-              <th>材料</th>
-              <th>类型</th>
-              <th>客户</th>
-              <th>批量</th>
-              <th>操作</th>
+              <th>订单编号</th>
+              <th>订单内容</th>
+              <th>交货日期</th>
+              <th>客户简称</th>
+              <th>备料</th>
+              <th>订单报价</th>
+              <th>客户项目号</th>
+              <th>完成</th>
+              <th>发货</th>
+              <th>收款</th>
+              <th>评审</th>
+              <th>建档时间</th>
+              <th>报价</th>
             </tr>
             </thead>
             <tbody>
-            {volist name="blueprintInfo" id="blueprintInfoList"}
+            {volist name="$orderRow" id="info"}
             <tr>
-              <td>{$blueprintInfoList.drawing_detail_id}</td>
-              <td>{$blueprintInfoList.drawing_internal_id}</td>
-              <td>{$blueprintInfoList.drawing_externa_id}</td>
-              <td>{$blueprintInfoList.drawing_name}</td>
-              <td>{$blueprintInfoList.heat_treatment}</td>
-              <td>{$blueprintInfoList.drawing_type}</td>
-              <td>{$blueprintInfoList.client_id}</td>
-              <td>{$blueprintInfoList.if_batch}</td>
-              <td class="td-manage">
-                <a title="详" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的所有信息','{:url(\'index/blueprint/blueprintInfos\',[\'id\'=>$blueprintInfoList.drawing_detail_id])}',450)" href="javascript:;"><i class="layui-icon">详</i></a>
-                <a title="外" onclick="x_admin_show('外','http://php.me/[爱，就注定了一生的漂泊].刘墉.扫描版.pdf')" href="javascript:;"><i class="layui-icon">外</i></a>
-                <a title="内" onclick="x_admin_show('内','http://php.me/超越平凡的平面设计+版式设计原理.pdf')" href="javascript:;"><i class="layui-icon">内</i></a>
-                <a title="程" onclick="x_admin_show('程','http://php.me/微交互  细节设计成就卓越产品.pdf')" href="javascript:;"><i class="layui-icon">程</i></a>
+              <td> {$info.order_id}</td>
+              <td>{$info.order_content}</td>
+              <td>{$info.delivery_time}</td>
+              <td>{$info.client_id}</td>
+              <td>{$info.prepare}</td>
+              <td>{$info.order_price}</td>
+              <td>
+                {$info.client_prj_id}
               </td>
+              <td>
+                {if $info.if_complete == 1}
+                完成
+                {else/}
+                未完成
+                {/if}
+              </td>
+              <td>
+                {if $info.deliver_goods}
+                已发货
+                {else/}
+                未发货
+                {/if}
+              </td>
+              <td>
+                {if $info.receivables == 1}
+                已收款
+                {else/}
+                未收款
+                {/if}
+              </td>
+              <td></td>
+              <td>{$info.create_time}</td>
+              <th>报价</th>
             </tr>
             {/volist}
             </tbody>
@@ -47,11 +70,8 @@
     </div>
   </fieldset>
   <xblock>
-    <button class="layui-btn layui-btn-danger" onclick="delAll('{$drawing_detail_id}')"><i class="layui-icon"></i>批量删除</button>
-    <button class="layui-btn" onclick="x_admin_show('工序信息','{:url(\'index/blueprint/addProcess\',[\'id\'=>$drawing_detail_id])}',500,500)"><i class="layui-icon"></i>添加</button>
-      <button class="layui-btn" onclick ="sort('{$drawing_detail_id}')" >一键排序</button>
-      <button class="layui-btn" onclick ="x_admin_show('一键复制','{:url(\'index/blueprint/copyProcess\',[\'id\'=>$drawing_detail_id])}',500,400)">一键复制</button>
-    <span class="x-right" style="line-height:40px">共{$count}条 · 共{$count/25|getInt}页</span>
+    <button class="layui-btn" onclick="x_admin_show('添加','{:url(\'index/blueprint/blueprintoutside\',[\'id\'=>1,'model'=>1,'order'=>$orderCode])}')"><i class="layui-icon"></i>添加</button>
+    <span class="x-right" style="line-height:40px">共{}条 · 共页</span>
   </xblock>
   <div class="layui-row">
     <div class="container-wrap">
@@ -68,56 +88,22 @@
               <th>工艺说明</th>
               <th>工序定额h(小时)</th>
               <th>是否检验</th>
-              {if $Think.session.user.is_offer !=0}
               <th>报价定额h(小时)</th>
               <th>工序报价</th>
-              {/if}
               <th>外协费用</th>
               <th>备注</th>
             </tr>
           </thead>
           <tbody>
-          {volist name="processInfo" id="processInfoList"}
+
             <tr>
-              <td>
-                <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='{$processInfoList.id}'><i class="layui-icon">&#xe605;</i></div>
-              </td>
-                <td>
-                    <!--<a title="详" onclick="x_admin_show('工序详情 <span class=\'layui-badge layui-bg-blue\'>{$processInfoList.process_id}</span> 修改操作','{:url(\'index/blueprint/editProcess\',[\'id\'=>$processInfoList.id])}',450)" href="javascript:;"><i class="layui-icon">详</i></a>-->
-                    <a title="修改" onclick="x_admin_show('修改工序 <span class=\'layui-badge layui-bg-blue\'>{$processInfoList.process_id}</span> 修改操作','{:url(\'index/blueprint/editProcess\',[\'id\'=>$processInfoList.id])}',500,500)" href="javascript:;"><i class="layui-icon" style="color: green">&#xe642;</i></a>
-                    <a title="删除" onclick="delete_process(this,'{$processInfoList.id}','{$processInfoList.drawing_detial_id}')"><i class="layui-icon" style="color:red"></i></a>
-                </td>
-              <td>
-                <?php echo substr($processInfoList['process_id'],strpos($processInfoList['process_id'],'P')+1); ?>
-                  <span class="layui-table-sort layui-inline">
-                    <i class="layui-edge layui-table-sort-asc" attr-id="{$processInfoList.id}" attr-drawing_detial_id="{$processInfoList.drawing_detial_id}"></i>
-                    <i class="layui-edge layui-table-sort-desc" attr-id="{$processInfoList.id}" attr-drawing_detial_id="{$processInfoList.drawing_detial_id}"></i>
-                  </span>
-              </td>
-              <td>{$processInfoList.process_name} --- {$processInfoList.process_price}</td>
-              <td><?php echo $processInfoList['process_content'];?></td>
-              <td>{$processInfoList.process_quota}</td>
-              <td>
-                {if $processInfoList.if_check == 1}
-                <span class="layui-badge layui-bg-blue">是</span>
-                {else}
-                <span class="layui-badge layui-bg-gray">否</span>
-                {/if}
-              </td>
-              {if $Think.session.user.is_offer !=0}
-              <td>{$processInfoList.quota_quotation}</td>
-              <td>{$processInfoList.process_quoted_price}</td>
-              {/if}
-              <td>{$processInfoList.process_real_price}</td>
-              <td>{$processInfoList.remark}</td>
+
             </tr>
-          {/volist}
           </tbody>
         </table>
       </div>
     </div>
     <div class="page">
-      {$processInfo|raw}
     </div>
   </div>
 </div>
