--- a/application/index/view/order/order.html
+++ b/application/index/view/order/order.html
@@ -28,7 +28,7 @@
               <button type="submit" class="layui-btn"  lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
             </form>
           </div>
-          <span class="x-right" style="line-height:40px">共条 · 共页</span>
+          <span class="x-right" style="line-height:40px">共条{$count} · 共页{$count|getInt}</span>
         </xblock>
       <div class="layui-row">
         <div class="container-wrap">
@@ -45,54 +45,67 @@
             <th>交货日期</th>
             <th>客户简称</th>
             <th>备料</th>
-            <th>发货</th>
-            <th>收款</th>
             <th>订单报价</th>
-            <th>完成</th>
             <th>客户项目号</th>
-            <th>备注</th>
+              <th>完成</th>
+              <th>发货</th>
+              <th>收款</th>
             <th>评审</th>
             <th>建档时间</th>
             <th>报价</th>
               </tr>
         </thead>
         <tbody>
+        {volist name ="orderInfo" id="info"}
           <tr>
             <td>
               <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='2'><i class="layui-icon">&#xe605;</i></div>
             </td>
             <td class="td-manage">
-              <a title="修改" onclick="x_admin_show('修改外图','{:url(\'index/Blueprint/outsideEdit\',[\'id\'=>1])}',400,400)", href="javascript:;"><i style="color: green" class="layui-icon"></i></a>
+              <a title="修改" onclick="x_admin_show('修改订单','{:url(\'index/Order/editOrder\',[\'id\'=>$info.id])}',600,600)", href="javascript:;"><i style="color: green" class="layui-icon"></i></a>
               <a title="删除" onclick="delete_(this,'')" href="javascript:void(0);" ><i  style="color:red;" class="layui-icon"></i></a>
             </td>
+            <td>  <a title="订单明细" onclick="x_admin_show('<span class=\' layui-bg-blue\'>{$info.order_id}</span> 订单明细','{:url(\'index/Order/orderDetail\',[\'id\'=>$info.id])}')", href="javascript:;"> {$info.order_id} </a></td>
+            <td>{$info.order_content}</td>
+            <td>{$info.delivery_time}</td>
+            <td>{$info.client_id}</td>
+            <td>{$info.prepare}</td>
+            <td>{$info.order_price}</td>
+            <td>
+             {$info.client_prj_id}
+            </td>
+            <td>
+              {if $info.if_complete == 1}
+              完成
+              {else/}
+              未完成
+              {/if}
+            </td>
+            <td>
+              {if $info.deliver_goods}
+              已发货
+              {else/}
+              未发货
+              {/if}
+            </td>
+            <td>
+              {if $info.receivables == 1}
+              已收款
+              {else/}
+              未收款
+              {/if}
+            </td>
             <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>{$info.create_time}</td>
             <th>报价</th>
           </tr>
+        {/volist}
         </tbody>
       </table>
           </div>
         </div>
       <div class="page">
-        <div>
-          <a class="prev" href="">&lt;&lt;</a>
-          <a class="num" href="">1</a>
-          <span class="current">2</span>
-          <a class="num" href="">3</a>
-          <a class="num" href="">489</a>
-          <a class="next" href="">&gt;&gt;</a>
-        </div>
+        {$orderInfo|raw}
       </div>
 
     </div>
